# seemypills

./: .gitignore  CLAUDE.md  LICENSE  README.md
.claude/: settings.local.json
.claude/commands/: fe-ui-component.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: issue_template.md
.github/workflows/: cd-main-update-deploy.yml  git-pr-develop-to-main-sync-branches.yml  (+2 more)
backend-python/: README.md  alembic.ini  pyproject.toml
backend-python/alembic/: env.py
backend-python/alembic/versions/: 2026_06_07_1053-b305a66eee07_create_pill_bottle_and_device_usage_.py  2026_06_16_1146-08f3a7ed3dbe_soft_delete_mixin_added_to_bottle_api.py  2026_06_16_1434-b941779ff276_ocr_raw_text_now_a_required_field.py
backend-python/app/: main.py
backend-python/app/core/: api_exception_handlers.py  api_response_schemas.py  config.py
backend-python/app/db/: database.py  mixins.py  session.py
backend-python/app/features/device-usage/: models.py
backend-python/app/features/device_usage/: models.py  schemas.py  services.py
backend-python/app/features/upload_bottle/: models.py  routers.py  schemas.py  services.py
backend-python/tests/db/: test_connection.py
backend-python/tests/features/upload_bottle/: test_models.py  test_routers.py  test_schemas.py  test_services.py
frontend/: 404.html  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
scripts/: cd-main-update-deploy.sh  git-action-sync-local.sh  git-diverged-force-align-develop.sh  git-pr-sync-develop.sh  git-pr-synced-pull.sh  git-protection-off-force-align-main.sh  git-sync-develop-to-main.sh  git-unprotected-force-align-develop.sh  git-unprotected-force-align-main.sh  sync-develop.sh  sync-main.sh
(+23 files in other folders)
