[project]
name = "backend-python"
version = "0.1.0"
description = "Python backend service for seemypills.com"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "easyocr>=1.7.2",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "opencv-python>=4.13.0.92",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.14.0",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.46.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
