[project]
name = "backend-python"
version = "0.1.0"
description = "Python backend service for seemypills.com"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "alembic>=1.18.4",
    "easyocr>=1.7.2",
    "fastapi>=0.136.1",
    "filetype>=1.2.0",
    "httpx>=0.28.1",
    "opencv-python>=4.13.0.92",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.14.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.46.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests that require external infrastructure (real databases, network) — skipped in CI",
]

filterwarnings = [
    # torch/easyocr internals on a deprecated torch quantization API, not our code.
    # check if still needed next time torch or easyocr is bumped — https://github.com/pytorch/ao/issues/2259
    "ignore:torch\\.ao\\.quantization is deprecated:DeprecationWarning",
    "ignore:'pin_memory' argument is set as true but no accelerator is found:UserWarning",
]
